of OS X is not compatible with Gutenprint.  OS X 10.2 and above use
CUPS as the basis of the printing system, which is compatible with
Gutenprint.

The README file included with this package provides full instructions
for building and installing Gutenprint.


================================================================

II) MAJOR CHANGES FROM PREVIOUS RELEASES

A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:

  1) New printers supported in this release:

     * Epson inkjet printers:

       Epson Picturemate Flash
       Epson Picturemate Pal
       Epson Picturemate Snap
       Epson Picturemate PM-200
       Epson Picturemate PM-210
       Epson Picturemate PM-240
       Epson Picturemate PM-250
       Epson Picturemate PM-280
       Epson Stylus C79+
       Epson Stylus C87+
       Epson Stylus Photo R230
       Epson Stylus Photo R350

  2) Preliminary support for the following printers:

     * Epson inkjet printers:

       Epson Stylus Photo 1400
       Epson Stylus Photo 1410
       Epson Stylus Photo R260
       Epson Stylus Photo R265
       Epson Stylus Photo R270
       Epson Stylus Photo R360
       Epson Stylus Photo R380
       Epson Stylus Photo R390
       Epson Stylus Photo RX560
       Epson Stylus Photo RX580
       Epson Stylus Photo RX640
       Epson PM A820
       Epson PM D870
       Epson PM G850


----------------

B) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:

  1) New printers supported in this release:

     * Dye sublimation printers:

       The driver for these printers has been renamed "dyesub", as
       many of the printers are manufactured by companies other than
       Olympus.

       Canon CP-10
       Fujifilm FinePix NX-500
       Kodak Easyshare Printer
       Olympus P-S100
       Sony DPP-EX5
       Sony UP-DR100

     * Canon inkjet printers:

       The support for these printers is under development, and there
       are known issues with these printers.  Please check with the